Fixed footer menu alignment

--- a/Style/style.css
+++ b/Style/style.css
@@ -317,6 +317,11 @@ color: white;
 }
 
 .footer__list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
     padding-left: 0;
     list-style: none;
     text-align: center;
